--- a/index.html
+++ b/index.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webdeveloper Protfolio</title>
-</head>
-<body>
-    
-    
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/protfolio.css">
 
+
+</head>
+
+<body class="open-sans-normal">
+
+
+    <header class="header1 secondary-bg "  >
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a href="">Protfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+
+
+            </ul>
+
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greeting">Hi, I am</h4>
+                <h1 class="banner-head">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> Contact</button>
+            </div>
+            <img class="banner-image" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata</p>
+<div class="abou-items">
+    <div class="about-item">
+        <p class="item-title">Name:</p>
+        <p class="itm-description">Mary Hardy</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">Email:</p>
+        <p class="itm-description">info@gmail.com</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">Date Of Birth:</p>
+        <p class="itm-description">111 November 1999</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">From:</p>
+        <p class="itm-description">Thakurgaon</p>
+    </div>
+</div>
+        </section>
 
     </main>
     <Footer>
@@ -21,4 +77,5 @@
 
 
 </body>
+
 </html>
