--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 simple, clean and slick websites that provide real value to the end user. Thousands of clients have
                 procured exceptional resulfs while working with me. Delivering work within time and budget which meets
                 clients requirements in our mata</p>
-            <div class="abou-items">
+            <div class="about-items">
                 <div class="about-item">
                     <p class="item-title">Name:</p>
                     <p class="itm-description">Mary Hardy</p>
@@ -68,7 +68,36 @@
                 </div>
             </div>
         </section>
+<!-- New section Start -->
+<section class="skills">
+    <h3 class="section-title text-edit">What I Do</h3>
+    <p class="section-description text-edit">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
 
+    <div class="skills-container">
+        <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+         <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <h4 class="skill-title">Vanilla JavaScript</h4>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+         <div class="skill">
+            <img src="images/icons/react.png" alt="">
+            <h4 class="skill-title">React</h4>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+         <div class="skill">
+            <img src="images/icons/nodejs.png"">
+            <h4 class="skill-title">Node.js</h4>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+         <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <h4 class="skill-title">MongoDB</h4>
+            <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+         </div>
+
+    </div>
+</section>
     </main>
     <Footer>
 
